# design_patterns_applied

./: CMakeLists.txt  Readme.md
architectural/: CMakeLists.txt
architectural/mvc/: CMakeLists.txt  model-view-controller.cpp
architectural/mvv/: CMakeLists.txt  model-view-viewmodel.cpp
behavioral/: CMakeLists.txt
behavioral/abstract_factory/: CMakeLists.txt  abstract_factory.cpp
behavioral/factory/: CMakeLists.txt  factory.cpp
behavioral/singleton/: CMakeLists.txt  singleton.cpp
concurrency/: CMakeLists.txt
concurrency/producer_consumer/: CMakeLists.txt  producer-consumer.cpp
concurrency/threadpool/: CMakeLists.txt  threadpool.cpp
creational/: CMakeLists.txt
creational/adapter/: CMakeLists.txt  adapter.cpp
creational/composite/: CMakeLists.txt  composite.cpp
creational/decorator/: CMakeLists.txt  decorator.cpp
structural/: CMakeLists.txt
structural/command/: CMakeLists.txt  command.cpp
structural/observer/: CMakeLists.txt  observer.cpp
structural/state/: CMakeLists.txt  state.cpp
structural/strategy/: CMakeLists.txt  strategy.cpp
